# vertigo-cmark

./: .gitignore  Cargo.toml  README.md
src/: generate.rs  highlighting.rs  lib.rs  styling.rs  table_state.rs  tests.rs
src/tests/: code.rs  code_highlighting.rs  lists.rs  mod.rs  styling.rs  table.rs
